<resources>
    <string name="app_name">Maxiplus Mobile</string>
    <string name="mainactivity_login">Already our customer? Fill in your login and password to access our services.</string>
    <string name="mainactivity_edit_login">login</string>
    <string name="mainactivity_edit_pass">password</string>
    <string name="mainactivity_button">Sign In</string>
    <string name="mainactivity_new_customer">New member? <u>Click here</u> to sign up.</string>
    <string name="mainactivity_try_login">Trying to sign in...</string>
    <string name="mainactivity_error_login">We are sorry. An error occurred during sign in, try again later.</string>
    <string name="mainactivity_success_login">Welcome!</string>
    <string name="loggedinactivity_logout">Log out</string>
    <string name="loggedinactivity_quote">Quote</string>
    <string name="loggedinactivity_user_tab_title">Profile</string>
    <string name="loggedinactivity_car_tab_title">Car</string>
    <string name="loggedinactivity_services_tab_title">Services</string>
    <string name="loggedinactivity_user_tab_selectpicture">Select Picture</string>
    <string name="loggedinactivity_user_tab_name">Name:</string>
    <string name="loggedinactivity_user_tab_login">Login:</string>
    <string name="loggedinactivity_user_tab_CPF">SSN:</string>
    <string name="loggedinactivity_user_tab_email">Email:</string>
    <string name="loggedinactivity_user_tab_pontosmaxi">Maxiplus Points:</string>
    <string name="signupactivity_edit_name">Name</string>
    <string name="signupactivity_edit_email">Email</string>
    <string name="signupactivity_edit_CPF">SSN</string>
    <string name="signupactivity_edit_login">Login</string>
    <string name="signupactivity_edit_password">Password 8 digits</string>
    <string name="signupactivity_edit_passconf">Confirm password</string>
    <string name="signupactivity_button_signup">Sign Up</string>
    <string name="signupactivity_warning_fields">Please fill in all fields first</string>
    <string name="signupactivity_warning_pass_size">Password must be 8 digits</string>
    <string name="signupactivity_warning_passconf">Password must be confirmed correctly</string>
    <string name="loggedinactivity_car_tab_insurances">Insurances</string>
    <string name="loadscreen_email_notification">Email not confirmed yet! Please check your inbox.</string>
    <string name="loggedinactivity_car_tab_quotes">Ask for quotation</string>
    <string name="loggedinactivity_car_tab_sinistro">Report a car crash or theft</string>
    <string name="loggedinactivity_car_tab_acompanhar">Follow insurance claim progress</string>
    <string name="chatactivity_not_sent">Error! Message not sent!</string>
    <string name="loggedinactivity_chat_fail">Failed to open chat!</string>

    <!-- Strings related to login -->
</resources>
