<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="br.com.nancode.maxiplusmobileappclient.SignUpActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded_shape_solid"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/signupactivity_edit_name"
        android:inputType="textPersonName"
        android:textColor="@color/cinzaEdit"
        android:textColorHint="@color/cinzaEdit"
        android:textColorLink="@color/cinzaEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_shape_solid"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/signupactivity_edit_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/cinzaEdit"
        android:textColorHint="@color/cinzaEdit"
        android:textColorLink="@color/cinzaEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_shape_solid"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/signupactivity_edit_CPF"
        android:inputType="number"
        android:textColor="@color/cinzaEdit"
        android:textColorHint="@color/cinzaEdit"
        android:textColorLink="@color/cinzaEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_shape_solid"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/signupactivity_edit_login"
        android:inputType="textPersonName"
        android:textColor="@color/cinzaEdit"
        android:textColorHint="@color/cinzaEdit"
        android:textColorLink="@color/cinzaEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_shape_solid"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/signupactivity_edit_password"
        android:inputType="textPassword"
        android:textColor="@color/cinzaEdit"
        android:textColorHint="@color/cinzaEdit"
        android:textColorLink="@color/cinzaEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_shape_solid"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/signupactivity_edit_passconf"
        android:inputType="textPassword"
        android:textColor="@color/cinzaEdit"
        android:textColorHint="@color/cinzaEdit"
        android:textColorLink="@color/cinzaEdit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <Button
        android:id="@+id/button6"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_shape_solidgreen"
        android:shadowColor="@android:color/black"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8"
        tools:text="@string/signupactivity_button_signup" />
</android.support.constraint.ConstraintLayout>
